--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     ],
     "testMatch": [
       "**/__tests__/**/*.test.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native|@react-native|react-native-async-storage)/)"
     ]
   },
   "dependencies": {
